Olog log entry attachment view retake, final updates